[project]
name = "ml-playground"
version = "0.1.0"
dependencies = [
  "torch",
  "torchvision",
  "torchaudio",
  "transformers[torch]",
  "ipython",
  "ipykernel",
  "ipywidgets",
  "datasets",
  "evaluate",
  "scikit-learn", 
  "scipy"
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]